--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "https://at-somenone.github.io/asdlab1/",
   "devDependencies": {
     "@types/chance": "^1.1.3",
     "@types/uuid": "^8.3.1",
